
Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Show inventory as document on lot trace

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Add locations to lot trace

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Check customer lot quantities for drop shipment
* Check outgoing lot quantities for internal shipment
* Check inventory lot quantities for customer return shipment
* Check outgoing lot quantities of customer shipment
* Check inventory lot quantities of supplier shipment

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11
* Allow stock lot to be deactivated
* Do not copy number of lot with sequence

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Synchronize lot on drop shipment

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Add lot to assign criteria if not empty
* Add lot traceability
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Add wizard to add lots
* Allow lot sequence number to be configured on product
* Add lots_by_locations Model

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Add relate to locations quantity
* Add lots by warehouse relate

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)

Version 5.4.0 - 2019-11-04
--------------------------
* Bug fixes (see mercurial logs for details)