@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree>
+    <field name="number" expand="1"/>
+    <field name="product" expand="1"/>
+    <field name="quantity" symbol="default_uom"/>
+    <field name="forecast_quantity" symbol="default_uom" optional="1"/>
+</tree>
