@@ -1,3 +1,4 @@
+* Display quantity when searching lot for move
 
 Version 7.4.0 - 2024-11-04
 --------------------------
